<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello, Android!  I am a string resource!</string>
    <string name="selfDestruct">Kaboom!</string>
    <string name="app_name">Lookahead</string>
    <string name="log">Add Log</string>
    <string name="gibberish">oogily oogily</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="test">Test</string>
    <string name="supported">Supported:</string>
    <string name="numberOfAxis">Number of Axis:</string>
    <string name="axis1">Axis 1:</string>
    <string name="axis2">Axis 2:</string>
    <string name="axis3">Axis 3:</string>
    <string name="zero">0</string>
    <string name="timeSinceLastUpdate">Time since last update:</string>
    <string name="minimumTime">Minimum time:</string>
</resources>
